# mcp_create

./: .gitignore  MCP_DEVELOPMENT_GUIDE.md  MCP_SCHOLAR_PROMPT.md  QUICK_START.md  README.md  SETUP_COMPLETE.txt  build-all.sh  configure-claude-cli.sh  configure-claude.sh  install-all.sh
mcp-scholar/: DEVELOPMENT.md  README.md  pyproject.toml  test.py
mcp-scholar/src/mcp_scholar/: __init__.py  __main__.py  models.py  openalex.py  semantic_scholar.py  server.py
mcp-scholar/tests/: README.md  test_api.py
mcp-time/: README.md  pyproject.toml
mcp-time/src/mcp_time/: __init__.py  __main__.py  server.py
mcp-time/tests/: test_time.py
