[project]
name = "mcp-scholar"
version = "0.1.0"
description = "MCP server for searching academic papers from OpenAlex and Semantic Scholar"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
mcp-scholar = "mcp_scholar.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_scholar"]
