[project]
name = "mcp-time"
version = "0.1.0"
description = "MCP server for time and timezone utilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "python-dateutil>=2.8.0",
]

[project.scripts]
mcp-time = "mcp_time.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_time"]
